// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StudentDash should match snapshot 1`] = `
<section
  className="StudentDashContainer"
>
  <div
    className="studentDashHeader"
  >
    <h2>
      Welcome, undefined!
    </h2>
  </div>
  <div
    className="student-dash-main"
  >
    <h3>
      Current Event
    </h3>
    <div
      className="eventWrapper"
    >
      <form
        onSubmit={[Function]}
      >
        <input
          className="eventCode"
          onChange={[Function]}
          placeholder="Enter Event Code"
          type="text"
        />
        <button
          type="submit"
        >
          Submit
        </button>
      </form>
    </div>
    <section
      className="pastEvents"
    >
      <h3>
        Attended Events
      </h3>
    </section>
  </div>
</section>
`;

exports[`StudentDash should match snapshot when mounted 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <StudentDash
      error=""
      isFetching={false}
      user={Object {}}
    >
      <section
        className="StudentDashContainer"
      >
        <div
          className="studentDashHeader"
        >
          <h2>
            Welcome, undefined!
          </h2>
        </div>
        <div
          className="student-dash-main"
        >
          <h3>
            Current Event
          </h3>
          <div
            className="eventWrapper"
          >
            <form
              onSubmit={[Function]}
            >
              <input
                className="eventCode"
                onChange={[Function]}
                placeholder="Enter Event Code"
                type="text"
              />
              <button
                type="submit"
              >
                Submit
              </button>
            </form>
          </div>
          <section
            className="pastEvents"
          >
            <h3>
              Attended Events
            </h3>
          </section>
        </div>
      </section>
    </StudentDash>
  </Router>
</BrowserRouter>
`;
